--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Home | Muzaffar Shaikh</title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A website about Muzaffar Shaikh">
         <meta name="author" content="Muzaffar Shaikh">
+
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+
+        <script src="js/scripts.js" type="text/javascript" defer></script>
     </head>
     <body>
         <h1>Home</h1>
@@ -20,7 +25,21 @@
             <li>HTML</li>
             <li>CSS3</li>
             <li>PHP</li>
-        </ul>  
+        </ul> 
+        <h2>My Favourite Picture</h2> 
+        <p>
+            I'd Like to share my best pics. It is of an illustration of flowers with heart. Hope, everyone like it.
+        </p>
+        <figure>
+            <img src= "img/daisy-712892_1920.jpg" alt= " A flowers with a heart shape." title= "A flowers with a heart shape">
+            <figcaption>
+                Illustration credited to
+                <a
+                    href= "https://pixabay.com/photos/daisy-heart-flowers-flower-heart-712892/" Lebensfreude
+                    target= "_blank" title= "Click here to view author's original profile">
+                </a>
+            </figcaption>
+        </figure>
     </body>
 
 </html>
