--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     </head>
     <body>
         <h1>Home</h1>
-        <h2>Navigation</h2>
+        <header>
+            <h2>Navigation</h2>
         <nav>
             <a href="index.html">Home</a>
         </nav>
+        </header>
+        
         <h2>Skills</h2>
         <p>
             Here are some of my skills:
@@ -40,6 +43,12 @@
                 </a>
             </figcaption>
         </figure>
+        <footer>
+            <h2>Footer</h2>
+            <p>
+                &copy; Copyrights 2020 TECHCareers; All Rights Reserved
+            </p>
+        </footer>
     </body>
 
 </html>
