--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,25 @@
                 </ul>  
             </nav>
         </header>
+
+        <form>
+            <label for="name">Please enter your name: </label>
+            <input id="name" type="text">
+
+            <br />
+
+            <label for="email">Please enter your email: </label>
+            <input id="email" type="text" />
+
+            <br />
+            
+            <label for="message">Please leave us a message: </label>
+            <textarea id="message me"></textarea>
+
+            <br />
+
+            <input type="submit" value="Submit me!">
+        </form>
         
         <footer>
             <h2>Footer</h2>
