Added POST, Added password type hidden

--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,10 @@
             </nav>
         </header>
 
-        <form>
+        <form action="contact.html" method="POST">
+
             <label for="name">Please enter your name: </label>
-            <input id="name" type="text">
+            <input id="name" name="name" type="text">
 
             <br />
 
@@ -33,9 +34,15 @@
             <input id="email" type="text" />
 
             <br />
+
+            <label for="password">Please enter your password: </label>
+            <input id="password" name="password" type="password">
+
+            <br />
             
             <label for="message">Please leave us a message: </label>
-            <textarea id="message me"></textarea>
+            <textarea id="message"></textarea>
+    
 
             <br />
 
