--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <h1>Home</h1>
         <header>
             <h2>Navigation</h2>
-        <nav>
-            <a href="index.html">Home</a>
+        <nav> 
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
         </header>
         
