Practice on article, section and sub-heading

--- a/index.html
+++ b/index.html
@@ -23,29 +23,27 @@
         </nav>
         </header>
         
-        <h2>Skills</h2>
-        <p>
-            Here are some of my skills:
-        </p>  
-        <ul>
-            <li>HTML</li>
-            <li>CSS3</li>
-            <li>PHP</li>
-        </ul> 
-        <h2>My Favourite Picture</h2> 
-        <p>
-            I'd Like to share my best pics. It is of an illustration of flowers with heart. Hope, everyone like it.
-        </p>
-        <figure>
-            <img src= "img/daisy-712892_1920.jpg" alt= " A flowers with a heart shape." title= "A flowers with a heart shape">
-            <figcaption>
-                Illustration credited to
-                <a
-                    href= "https://pixabay.com/photos/daisy-heart-flowers-flower-heart-712892/" Lebensfreude
-                    target= "_blank" title= "Click here to view author's original profile">
-                </a>
-            </figcaption>
-        </figure>
+       <article>
+           <h3>My Favourite Picture</h3>
+           <p>
+               Below is one of my Favourite Picture
+          </p>
+
+          <section>
+              <h4>Seaside Nature</h4>
+              <p>
+                  I would like to share one of my best picture. It is a beautiful seaside with a natural beauty along with crystal clear water. Check it out!
+              </p>
+              <figure>
+                  <img src="img/Seaside nature.jpg" alt="An illustartion of seaside natural." title="An example of beautiful natural seaside">
+                  <figcaption>
+                      An illustartion credited to:
+                      <a href="https://www.pexels.com/photo/seaside-994605/" target="_blank" title="Click here to view author original profile.">Fabian Wiktor
+                      </a>
+                  </figcaption>
+              </figure>
+          </section>
+       </article>
         <footer>
             <h2>Footer</h2>
             <p>
