Practice on direct descendent selector.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
               </figure>
           </section>
        </article>
+
+        <aside>
+           <h5>Hobbies</h5>
+           <p>I would also like to travel and explore beautiful new places for my entertainment.</p>
+        </aside>
         <footer>
             <h2>Footer</h2>
-            <p>
+            <p>Thanks for visiting my page!</p>
+             <div>
+                <p>
                 &copy; Copyrights 2020 TECHCareers; All Rights Reserved
-            </p>
+                </p>
+            </div>
         </footer>
     </body>
 
