Added second image to index.html and understand the concept of class in html & in css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <script src="js/scripts.js" type="text/javascript" defer></script>
     </head>
     <body>
-        <h1>Home</h1>
+        <h1 class="web1">Home</h1>
         <header>
-            <h2>Navigation</h2>
+            <h2 class="set1">Navigation</h2>
         <nav> 
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,13 +24,13 @@
         </header>
         
        <article>
-           <h3>My Favourite Picture</h3>
+           <h3 class="set1">My Favourite Picture</h3>
            <p>
                Below is one of my Favourite Picture
           </p>
 
           <section>
-              <h4>Seaside Nature</h4>
+              <h4 class="set1">Seaside Nature</h4>
               <p>
                   I would like to share one of my best picture. It is a beautiful seaside with a natural beauty along with crystal clear water. Check it out!
               </p>
@@ -43,14 +43,29 @@
                   </figcaption>
               </figure>
           </section>
+
+          <section>
+              <h5 class="set1">Winding Road</h5>
+              <p>
+                  A photo shows the beautiful view of winding road with sunrise beauty. It described the natural scenery of any landscape sunrise point.
+              </p>
+              <figure>
+                  <img src="img/winding-road-1556177_640.jpg" alt="An example of winding road with sunrise" title="photo of winding road with sunrise view">
+                  <figcaption>
+                      A photo credited to:
+                      <a href="https://pixabay.com/photos/winding-road-road-travel-sunrise-1556177/" target="-blank" title="Click here to see author profile">JanBaby
+                      </a>
+                  </figcaption>
+              </figure>
+          </section>
        </article>
 
         <aside>
-           <h5>Hobbies</h5>
+           <h5 class="set1">Hobbies</h5>
            <p>I would also like to travel and explore beautiful new places for my entertainment.</p>
         </aside>
-        <footer>
-            <h2>Footer</h2>
+        <footer class="pic">
+            <h2 class="set1">Footer</h2>
             <p>Thanks for visiting my page!</p>
              <div>
                 <p>
