Added some css stuff for practicing

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 
           <section>
               <h4 class="set1">Seaside Nature</h4>
-              <p>
+              <div>
+              <p class= "p1">
                   I would like to share one of my best picture. It is a beautiful seaside with a natural beauty along with crystal clear water. Check it out!
               </p>
+              </div>
               <figure>
-                  <img src="img/Seaside nature.jpg" alt="An illustartion of seaside natural." title="An example of beautiful natural seaside">
+                  <img class="photo1" id="seaside" img src="img/Seaside nature.jpg" alt="An illustartion of seaside natural." title="An example of beautiful natural seaside">
                   <figcaption>
                       An illustartion credited to:
                       <a href="https://www.pexels.com/photo/seaside-994605/" target="_blank" title="Click here to view author original profile.">Fabian Wiktor
@@ -44,13 +46,15 @@
               </figure>
           </section>
 
-          <section>
+          <section class="background1">
               <h5 class="set1">Winding Road</h5>
-              <p>
+              <div>
+              <p class= "p2">
                   A photo shows the beautiful view of winding road with sunrise beauty. It described the natural scenery of any landscape sunrise point.
               </p>
+              </div>
               <figure>
-                  <img src="img/winding-road-1556177_640.jpg" alt="An example of winding road with sunrise" title="photo of winding road with sunrise view">
+                  <img class="photo2" id="road" img src="img/winding-road-1556177_640.jpg" alt="An example of winding road with sunrise" title="photo of winding road with sunrise view">
                   <figcaption>
                       A photo credited to:
                       <a href="https://pixabay.com/photos/winding-road-road-travel-sunrise-1556177/" target="-blank" title="Click here to see author profile">JanBaby
