Moved h1 into header; Navigation into nav on all pages

--- a/columns.html
+++ b/columns.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home | Muzaffar Shaikh</title>
+        <title>Columns | Muzaffar Shaikh</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A website about Muzaffar Shaikh">
@@ -14,7 +14,7 @@
 
     <body>
         <header>
-            <h1 class="web1">Home</h1>
+            <h1 class="web1">Columns</h1>
         <nav> 
             <h2 class="set1">Navigation</h2>
             <ul>
@@ -63,22 +63,23 @@
                       </a>
                   </figcaption>
               </figure>
-          </section>
+           </section>
        </article>
 
         <aside>
            <h5 class="set1">Hobbies</h5>
            <p>I would also like to travel and explore beautiful new places for my entertainment.</p>
         </aside>
-        </main> 
+        <h2>Sample Columns Layouts</h2>
+    </main>
 
         <footer class="pic">
             <h2 class="set1">Footer</h2>
             <p>Thanks for visiting my page!</p>
              <div>
                 <p>
-                &copy; Copyrights 2020 <span>TECHCareer</span>;
-                 All Rights Reserved
+                &copy; Copyrights 2020 <span>TECHCareer</span>; 
+                All Rights Reserved
                 </p>
             </div>
         </footer>
