--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,15 @@
         <script src="js/scripts.js" type="text/javascript" defer></script>
     </head>
     <body>
-        <h1 class="web1">Contact</h1>
+        
         <header>
-            <h2 class="set2">Navigation</h2>
+            <h1 class="web1">Contact</h1>     
             <nav>
+                <h2 class="set2">Navigation</h2>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href= "contact.html">Contact</a></li>
+                    <li><a href="columns.html">Columns</a></li>
                 </ul>  
             </nav>
         </header>
